# ReadFromConfig

./: .gitignore  CMakeLists.txt  README.md
conf/: config.yaml
include/config/: config.h
src/config/: config.cpp
test/: config_test.cpp
